Build the GUI Builder for Java 8 so every project can open it
The editor was compiled for Java 17 and cn1:guibuilder refused to start on
anything older. That is stricter than the rest of the toolchain and it is not
a constraint anyone asked for: it means a project built on an older JDK can be
run in the simulator but cannot be opened in the designer.

Nothing here needed a modern language feature. Arrow switch labels became
colon labels, the one switch expression became a switch statement with
returns, and pattern matching for instanceof became an instanceof plus a cast.
Where a binding was reassigned, or where the cast would have repeated a getter
call several times, a local variable is declared instead.

The forked JVM no longer receives --add-exports below Java 9, where it is an
unrecognized option that stops the process before it can report anything. The
editor is spawned detached with its output going only to guibuilder.log, so
that failure would have been completely silent.

The reactor, build-and-run.sh and the CI workflow all compile and test with
JDK 8 now, because source/target alone would still let a post-8 JDK API
through unnoticed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>